Added some functions for completing FINISHED msg, work still in progress, added some more to the test logic FSM

--- a/openssl_server/README
+++ b/openssl_server/README
@@ -24,3 +24,6 @@ The Keys are generated as explained above:
 To check the modulus of the key you generated, given the following commnad:
 $ openssl rsa -in www.key -noout -modulus
 When you run the client program, you will find that this is being printed in the verifyCertificate() function.
+
+To view certficate contents
+$ openssl x509 -in webserver.crt -text -noout
