--- a/README
+++ b/README
@@ -19,6 +19,12 @@ The Monitor Application is a single binary called "mont_cust". This is spawned a
 There are many Assessment Tools today that can also be used. One such list of tools is at https://github.com/ssllabs/research/wiki/Assessment-Tools.  A list of cve ids is maintained at: https://cve.mitre.org/cgi-bin/cvekey.cgi?keyword=openssl
 Some other tools that are used for HTTP testing are burp, wrk
 
+Executing
+=========
+There are 2 ways to run the tool
+a) Run it from shell "./mont_cust 100 openvpn". This reads the config from /var/,mont/100/config.json.
+b) Run it using the Django framework. For, this one needs to configure the various parameters in the Edit screen, and these then go as a parameter to the ./mont_cust program. Instead of reading the config file at /var/mont/100/config.json, it accepts another parameter, which is the configuration file in json format. From that point the code path is the same.
+
 Logging
 =======
 The SSL Test Process executes all tests, and write:
